--- a/STM32F4xx_DSP_StdPeriph_Lib_1.5/Project/OTG-VCP/MDK-ARM/Project.uvprojx
+++ b/STM32F4xx_DSP_StdPeriph_Lib_1.5/Project/OTG-VCP/MDK-ARM/Project.uvprojx
@@ -532,9 +532,9 @@
               <FilePath>..\src\usbd_usr.c</FilePath>
             </File>
             <File>
-              <FileName>stm32fxxx_it.c</FileName>
+              <FileName>stm32f4xx_it.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\src\stm32fxxx_it.c</FilePath>
+              <FilePath>..\src\stm32f4xx_it.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -1749,9 +1749,9 @@
               <FilePath>..\src\usbd_usr.c</FilePath>
             </File>
             <File>
-              <FileName>stm32fxxx_it.c</FileName>
+              <FileName>stm32f4xx_it.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\src\stm32fxxx_it.c</FilePath>
+              <FilePath>..\src\stm32f4xx_it.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2966,9 +2966,9 @@
               <FilePath>..\src\usbd_usr.c</FilePath>
             </File>
             <File>
-              <FileName>stm32fxxx_it.c</FileName>
+              <FileName>stm32f4xx_it.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\src\stm32fxxx_it.c</FilePath>
+              <FilePath>..\src\stm32f4xx_it.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -4183,9 +4183,9 @@
               <FilePath>..\src\usbd_usr.c</FilePath>
             </File>
             <File>
-              <FileName>stm32fxxx_it.c</FileName>
+              <FileName>stm32f4xx_it.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\src\stm32fxxx_it.c</FilePath>
+              <FilePath>..\src\stm32f4xx_it.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -5443,9 +5443,9 @@
               <FilePath>..\src\usbd_usr.c</FilePath>
             </File>
             <File>
-              <FileName>stm32fxxx_it.c</FileName>
+              <FileName>stm32f4xx_it.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\src\stm32fxxx_it.c</FilePath>
+              <FilePath>..\src\stm32f4xx_it.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -6140,16 +6140,16 @@
       <ToolsetName>ARM-ADS</ToolsetName>
       <TargetOption>
         <TargetCommonOption>
-          <Device>STM32F446ZETx</Device>
+          <Device>STM32F407VGTx</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F4xx_DFP.2.3.1</PackID>
+          <PackID>Keil.STM32F4xx_DFP.2.3.0</PackID>
           <PackURL>http://www.keil.com/pack</PackURL>
-          <Cpu>IROM(0x08000000,0x80000) IRAM(0x20000000,0x20000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
+          <Cpu>IROM(0x08000000,0x100000) IRAM(0x20000000,0x20000) IRAM2(0x10000000,0x10000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
-          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD20000000 -FC1000 -FN1 -FF0STM32F4xx_512 -FS08000000 -FL080000 -FP0($$Device:STM32F446ZETx$CMSIS\Flash\STM32F4xx_512.FLM))</FlashDriverDll>
+          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD20000000 -FC1000 -FN1 -FF0STM32F4xx_1024 -FS08000000 -FL0100000 -FP0($$Device:STM32F407VGTx$CMSIS\Flash\STM32F4xx_1024.FLM))</FlashDriverDll>
           <DeviceId>0</DeviceId>
-          <RegisterFile>$$Device:STM32F446ZETx$Drivers\CMSIS\Device\ST\STM32F4xx\Include\stm32f4xx.h</RegisterFile>
+          <RegisterFile>$$Device:STM32F407VGTx$Drivers\CMSIS\Device\ST\STM32F4xx\Include\stm32f4xx.h</RegisterFile>
           <MemoryEnv></MemoryEnv>
           <Cmp></Cmp>
           <Asm></Asm>
@@ -6159,7 +6159,7 @@
           <SLE66CMisc></SLE66CMisc>
           <SLE66AMisc></SLE66AMisc>
           <SLE66LinkerMisc></SLE66LinkerMisc>
-          <SFDFile>$$Device:STM32F446ZETx$CMSIS\SVD\STM32F446x.svd</SFDFile>
+          <SFDFile>$$Device:STM32F407VGTx$CMSIS\SVD\STM32F40x.svd</SFDFile>
           <bCustSvd>0</bCustSvd>
           <UseEnv>0</UseEnv>
           <BinPath></BinPath>
@@ -6349,7 +6349,7 @@
             <hadXRAM>0</hadXRAM>
             <uocXRam>0</uocXRam>
             <RvdsVP>2</RvdsVP>
-            <hadIRAM2>0</hadIRAM2>
+            <hadIRAM2>1</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
             <useUlib>1</useUlib>
@@ -6413,7 +6413,7 @@
               <IROM>
                 <Type>1</Type>
                 <StartAddress>0x8000000</StartAddress>
-                <Size>0x80000</Size>
+                <Size>0x100000</Size>
               </IROM>
               <XRAM>
                 <Type>0</Type>
@@ -6438,7 +6438,7 @@
               <OCR_RVCT4>
                 <Type>1</Type>
                 <StartAddress>0x8000000</StartAddress>
-                <Size>0x80000</Size>
+                <Size>0x100000</Size>
               </OCR_RVCT4>
               <OCR_RVCT5>
                 <Type>1</Type>
@@ -6467,8 +6467,8 @@
               </OCR_RVCT9>
               <OCR_RVCT10>
                 <Type>0</Type>
-                <StartAddress>0x0</StartAddress>
-                <Size>0x0</Size>
+                <StartAddress>0x10000000</StartAddress>
+                <Size>0x10000</Size>
               </OCR_RVCT10>
             </OnChipMemories>
             <RvctStartVector></RvctStartVector>
@@ -6660,9 +6660,9 @@
               <FilePath>..\src\usbd_usr.c</FilePath>
             </File>
             <File>
-              <FileName>stm32fxxx_it.c</FileName>
+              <FileName>stm32f4xx_it.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\src\stm32fxxx_it.c</FilePath>
+              <FilePath>..\src\stm32f4xx_it.c</FilePath>
             </File>
           </Files>
         </Group>
